# bitforge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_gpu.bat  build_search.bat  capture.ps1
arecibo/: arecibo_2026.txt  gen_arecibo.py
cli/: bitforge_cli.cpp
core/: address.h  alien.h  arecibo.h  bit_span.h  buffer_source.h  byte_source.h  disk_source.cpp  disk_source.h  file_source.h  gpu.h  process_source.cpp  process_source.h  scanner.cpp  scanner.h  source_ops.h
gpu/: gpu_bitforge.cu
gui/: bitforge_gui.cpp
search/: bf_search.cu
